[project]
name = "Smoothie"
version = "0.2.4"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Chase Holdener"}
]
dependencies = [
    "anndata>=0.9.2",
    "numpy>=1.23.5",
    "pandas>=1.5.3",
    "scanpy>=1.9.3",
    "matplotlib>=3.7.1",
    "scipy>=1.9.3",
    "igraph>=0.10.6",
]